<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.mehikamanocha.app.Demographics">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context="com.example.mehikamanocha.app.FingerTapping">

        <include
            android:id="@id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="25pt"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbar"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/please_answer_the_following_questions"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/AskGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/questions"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:text="@string/_1_gender"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/Gender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/AskGender"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="EnterGender"
                android:text="@string/female"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:onClick="EnterGender"
                android:text="@string/male"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:onClick="EnterGender"
                android:text="@string/other"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/AskAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EnterAge"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:text="@string/_2_age"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/EnterAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Gender"
            android:layout_marginStart="150dp"
            android:ems="8"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/EnterAge"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:text="@string/_3_which_one_do_you_identify_yourself_as"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="EnterHand"
                android:text="@string/right_handed"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="EnterHand"
                android:text="@string/left_handed"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/ambi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="EnterHand"
                android:text="@string/ambidextrous"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/radioGroup2"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:text="@string/_4_have_you_been_clinically_diagnosed_with_pd"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/diagnosed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView7"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/yes"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/no"
                android:textSize="20sp" />
        </RadioGroup>

        <ImageButton
            android:id="@+id/next"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/questions"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:elevation="20dp"
            android:onClick="goToNext"
            android:src="@drawable/forward" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_toStartOf="@+id/next"
            android:background="@null"
            android:elevation="20dp"
            android:onClick="goToNext"
            android:text="@string/next"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

    </RelativeLayout>

</ScrollView>