<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mehikamanocha.app.FingerTapping">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context="com.example.mehikamanocha.app.FingerTapping">

        <include
            android:id="@id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="25pt" />

        <Button
            android:id="@+id/refresh"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_above="@+id/start"
            android:layout_centerHorizontal="true"
            android:onClick="refreshTimer"
            android:text="@string/restart_button" />

        <ImageButton
            android:id="@+id/timer"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_alignTop="@+id/time"
            android:layout_toEndOf="@+id/time"
            android:background="@null"
            android:src="@drawable/timer" />

        <Button
            android:id="@+id/start"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="64dp"
            android:onClick="startTimer"
            android:text="@string/start_button" />


        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="132dp"
            android:layout_marginTop="79dp"
            android:text="@string/_30s"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tap1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="272dp"
            android:text="@string/TAP"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tap2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/tap1"
            android:layout_marginEnd="64dp"
            android:text="@string/TAP"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:elevation="20dp"
            android:onClick="goToProfile"
            android:src="@drawable/user" />

        <ImageButton
            android:id="@+id/help"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:elevation="20dp"
            android:onClick="gotoInstructions"
            android:src="@drawable/help"/>

    </RelativeLayout>

    </android.support.v4.widget.DrawerLayout>
